# qupcrypt

./: Readme.md  pyproject.toml  setup.py
qupcrypt/: WebCrypt.py  __init__.py  custom_aes.py  encryption.py
qupcrypt.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_custom_aes.py  test_encryption.py  test_webcrypt.py
