[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "qupcrypt"
version = "0.1.5"
description = "A custom encryption library using AES"
authors = ["jpshashank200@gmail.com"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pycryptodome = "^3.12.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
